--- a/src/features/searchBar/SearchBar.css
+++ b/src/features/searchBar/SearchBar.css
@@ -9,14 +9,10 @@ form {
     margin: 0;
 }
 
-input {
-    margin: 0;
-}
-
 button {
     border: none;
     background: white;
-    /*vertical-align: bottom;*/
-    margin: 0;
-    padding: 0.25rem 0.5rem;
+    vertical-align: bottom;
+    margin: 0 0 0 0.25rem;
+    padding: 0.25rem 0.25rem 0 0.35rem;
 }
